# curt

./: .gitignore  BENCHMARK.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  SPEC.md
.github/workflows/: ci.yml  pages.yml  release.yml
archive/: DESIGN-v0.1.md
ci/: check.sh  wasm_smoke.sh
corpus/: 02_hyp.curt  02_hyp.py  03_fib.curt  03_fib.py  04_binsearch.cmm  04_binsearch.go  04_binsearch.py  04_binsearch.rs  05_records.cmm  05_records.py  06_union_match.curt  06_union_match.py  07_errors.curt  07_errors.go  07_errors.py  07_errors.rs  08_pipeline.cmm  08_pipeline.curt  08_pipeline.py  09_strings.cmm  09_strings.py  10_group.curt  10_group.go  10_group.py  10_group.rs  11_filelines.curt  11_filelines.py  12_fold.curt  12_fold.py  13_tuples.cmm  13_tuples.py  14_while_acc.curt  14_while_acc.py  15_spawn.curt  15_spawn.py  16_bitops.cmm  16_bitops.curt  16_bitops.py  17_export_ffi.curt  18_wordfreq.curt  (+15 more)
data/curtcoder/: MANIFEST.json
data/py2curt/: REPORT-real.md  REPORT-synth.md  REPORT-synth2.md  REPORT.md
docs/: UX-BLUEPRINT.md  VS-ZERO.md  llms.txt
examples/embed/: mock_host.py  run.mjs  run.py
playground/: .gitignore  README.md  build.mjs  curt.wasm  gui-scrutiny.spec.mjs  index.html  package-lock.json  package.json  playwright.config.mjs  styles.css  tokcheck.mjs
playground/src/: app.js  runner.js  tokens.js
site/: CNAME  README.md  build.mjs
site/assets/: brand.css  site.js
site/pages/: benchmarks.html  index.html  language.html
src/: ast.rs  dense.rs  diag.rs  eval.rs  expand.rs  ffi.rs  fmt.rs  infer.rs  lexer.rs  lib.rs  lint.rs  main.rs  parser.rs  repair.rs
tests/: dense.rs  flagship.rs  fmt.rs  infer.rs  lint.rs  match_types.rs  parse_corpus.rs  postel.rs  run_corpus.rs  spec_truth.rs  units.rs
tests/fixtures/: badjob.json  log.txt  logmill.json  words.txt
tools/mcp/: README.md  THREATMODEL.md  demo_selfrepair.py  pyproject.toml  server.json
tools/mcp/curt_mcp/: __init__.py  server.py
(+1374 files in other folders)
