[package]
name = "curt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A machine-first programming language for AI agents - output-token cost is the prime design directive"
homepage = "https://curtlang.com"
keywords = ["language", "ai-agents", "tokens", "interpreter"]
categories = ["compilers", "parser-implementations"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
tiktoken-rs = { version = "0.6", optional = true }

[features]
# native default = full toolchain; the wasm32-wasip1 build disables both:
#   tokens — tiktoken-rs (the `tokens` subcommand + token-delta gates);
#            gated code degrades to documented monotone fallbacks
#   net    — std::net (Conn/Listener values, net.listen); without it net
#            ops yield rescuable err values, same as the cap-denied path
default = ["tokens", "net"]
tokens = ["dep:tiktoken-rs"]
net = []

[profile.release]
opt-level = 3
lto = "thin"
strip = true
