[project]
name = "curt-mcp"
version = "0.1.0"
description = "MCP code-execution server for curt - the machine-first language for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
dependencies = ["mcp>=1.2"]

[project.scripts]
curt-mcp = "curt_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["curt_mcp"]
